--- a/translations/kangyur/translations/101-146_toh1090,1777-in_praise_of_the_mistress_of_disease.xml
+++ b/translations/kangyur/translations/101-146_toh1090,1777-in_praise_of_the_mistress_of_disease.xml
@@ -24,14 +24,14 @@
         <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.8 <date>2023</date>
+                <edition>v 1.0.9 <date>2023</date>
                 </edition>
             </editionStmt>
-      <publicationStmt status="1.a">
-        <publisher>
+      <publicationStmt status="1">
+                <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit initiative to translate all the Buddha’s words into
           modern languages, and to make them available to everyone. </publisher>
-        <availability>
+                <availability>
           <p type="tantricRestriction">
                         <emph rend="bold">Warning:</emph> Readers are reminded that according to Vajrayāna Buddhist tradition there are
             restrictions and commitments concerning tantra. Practitioners who are not sure if they should read this translation are advised to consult
@@ -44,11 +44,11 @@
               compensation. For full details, see the Creative Commons license.</p>
           </licence>
         </availability>
-        <idno xml:id="UT22084-101-146"/>
-        <note>An early mistake in the assigning of UT numbers within the 84000 project means that these ids diverge slightly from the standard
+                <idno xml:id="UT22084-101-146"/>
+                <note>An early mistake in the assigning of UT numbers within the 84000 project means that these ids diverge slightly from the standard
           logic.</note>
-        <date>2023-04-07</date>
-      </publicationStmt>
+                <date>2023-04-07</date>
+            </publicationStmt>
       <sourceDesc>
         <bibl key="toh1090" type="text">
           <ref>Toh 1090</ref>
@@ -71,7 +71,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-05-11T15:24:59.481Z" user="admin">11/05/2023 15:24:59</note>
+        <note type="lastUpdated" date-time="2023-05-21T11:06:17.107Z" user="admin">21/05/2023 11:06:17</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">2.h</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">Auto
           (update-publication-status)</note>
@@ -129,6 +129,8 @@
           <note type="updated" update="text-version" value="1.0.6" date-time="2023-05-10T09:18:00.985Z" user="laura">Edits to translation + notes from Andreas</note>
           <note type="updated" update="text-version" value="1.0.7" date-time="2023-05-10T09:55:44.882Z" user="john">Typo corrected.</note>
           <note type="updated" update="text-version" value="1.0.8" date-time="2023-05-11T15:24:56.605Z" user="celso">typo corrected in homage and n.7, recached glossary</note>
+          <note type="updated" update="translation-status" value="1" date-time="2023-05-21T11:06:12.395Z" user="sameer">1</note>
+          <note type="updated" update="text-version" value="1.0.9" date-time="2023-05-21T11:06:12.395Z" user="sameer">Included in App v 3.2</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
