--- a/translations/kangyur/translations/094-015_toh738,1092-in_praise_of_the_glorious_goddess_sarasvati.xml
+++ b/translations/kangyur/translations/094-015_toh738,1092-in_praise_of_the_glorious_goddess_sarasvati.xml
@@ -24,10 +24,10 @@
                 <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2021</date>
+                <edition>v 1.0.1 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="1.a">
+            <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
@@ -69,7 +69,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T18:52:07.229Z" user="celso">18/01/2023 18:52:07</note>
+                <note type="lastUpdated" date-time="2023-05-21T11:10:20.972Z" user="admin">21/05/2023 11:10:20</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-02-22T13:25:53.267Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-02-22T13:25:53.267Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-22T13:27:02.109Z" user="line-tofte">Auto
@@ -114,6 +114,8 @@
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-04T08:47:22.873Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="1.a" date-time="2022-08-12T15:26:07.034Z" user="andre">1.a</note>
                 <note type="updated" update="text-version" value="1.0.0" date-time="2022-08-12T15:26:07.034Z" user="andre">First published version</note>
+                <note type="updated" update="translation-status" value="1" date-time="2023-05-21T11:10:16.39Z" user="sameer">1</note>
+                <note type="updated" update="text-version" value="1.0.1" date-time="2023-05-21T11:10:16.39Z" user="sameer">Included in App v 2.3</note>
             </notesStmt>
         </fileDesc>
 
