--- a/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
+++ b/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
@@ -54,7 +54,7 @@
                                 <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -96,7 +96,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-05-22T18:38:53.825Z" user="admin">22/05/2023 18:38:53</note>
+                                <note type="lastUpdated" date-time="2023-05-22T20:16:08.21Z" user="admin">22/05/2023 20:16:08</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">2.h</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-05T16:22:36.428Z" user="mike">summary
@@ -147,6 +147,7 @@
                             <note type="updated" update="text-version" value="1.0.1" date-time="2023-05-19T13:21:35.038Z" user="martina-cotter">Auto (update-publication-status)</note>
                             <note type="updated" update="text-version" value="1.0.2" date-time="2023-05-19T13:28:15.645Z" user="martina-cotter">Auto (update-publication-status)</note>
                             <note type="updated" update="text-version" value="1.0.3" date-time="2023-05-22T18:38:50.829Z" user="andre">Glossary revised - activated in CG</note>
+                            <note type="updated" update="text-version" value="1.0.4" date-time="2023-05-22T20:16:05.192Z" user="john">Some preliminary unfinished edits toward a revision.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -778,16 +779,16 @@
                                                 entering nirvāṇa, they do not think about nirvāṇa,
                                                 and they do not cling to nirvāṇa. They are not
                                                 afraid, scared, or terrified of emptiness. Since
-                                                they strive to abandon all phenomena, what need is
-                                                there to mention them not clinging to such a
-                                                nonvirtuous intrinsic nature? Since they contemplate
-                                                such things as grasping at a self, a being, a life
+                                                they strive to abandon all phenomena, it goes without saying
+                                                that they do not cling to such a
+                                                nonvirtuous intrinsic nature. Since their attention
+                                                is not turned to any of those kinds of grasping, such as grasping at a self, a being, a life
                                                 force, a person, or any other type of thing, they
-                                                abide in absorption free of marks. Without grasping
+                                                are steeped in the absorption free of marks. Without grasping
                                                 at marks, they understand that all marks have a
                                                 single characteristic—the absence of
                                                 characteristics—and that, Śāriputra, is the
-                                                concordant acceptance. Śāriputra, because the monks
+                                                acceptance of what concords with the truth. Śāriputra, because the monks
                                                 who possess such an acceptance are my disciples,
                                                 they should receive and make use of gifts that are
                                                 given out of faith. </p>
@@ -1414,7 +1415,7 @@
                                                 unmistaken, and genuine view is an immature ordinary
                                                 being. Why is that? Śāriputra, some immature
                                                 ordinary beings lack the correct view. Others who
-                                                have the concordant acceptance have one aspect of
+                                                have acceptance that concords with the truth have one aspect of
                                                 the correct view but do not see things as they
                                                 really are. Thus, Śāriputra, there are both correct
                                                 and wrong views. Seeing correctly leads to the
@@ -1802,7 +1803,7 @@
                                         <p tid="139">“They will practice the contemplation of
                                                 Lokāyatas as they lie down, and then fall asleep
                                                 with such a mindset. They will not give rise to the
-                                                concordant acceptance during any of the three parts
+                                                acceptance that concords with the truth during any of the three parts
                                                 of the night. They will place their highest efforts
                                                 in inferior, impure discourses and acquire robes,
                                                 alms, sleeping places, medicine, and requisites. Why
@@ -2712,7 +2713,7 @@
                                                 previous victor present their questions to those
                                                 proud monks—those deluded and decrepit elders who
                                                 put great effort into following mistaken paths—they
-                                                will reply: ‘The concordant acceptance consists of
+                                                will reply: ‘The acceptance that concords with the truth consists of
                                                 proper bodily, verbal, and mental conduct, observing
                                                 the vows of discipline, reading aloud, reciting,
                                                 striving to develop erudition, and trusting the
@@ -3878,8 +3879,8 @@
                                                 will not think about what brings about peace, what
                                                 peace is, or where peace is, because there is no
                                                 apprehending. Śāriputra, the ultimate reality,
-                                                emptiness, is the concordant acceptance. Those who
-                                                possess this concordant acceptance will not
+                                                emptiness, is the acceptance that concords with the truth. Those who
+                                                possess this acceptance that concords with the truth will not
                                                 apprehend the ultimate reality as something that has
                                                 an inherent characteristic. Śāriputra, what is the
                                                 inherent characteristic related to that acceptance?
@@ -4067,7 +4068,7 @@
                                                 unholy beings also propounded such views and caused
                                                 the vast and excellent teachings to vanish.
                                                 Śāriputra, since they had adopted non-Dharma as the
-                                                Dharma, the concordant acceptance did not arise in
+                                                Dharma, the acceptance that concords with the truth did not arise in
                                                 them, even though they endeavored, applied effort,
                                                 and were diligent. What need is there to mention
                                                 them attaining the fruition? That would have been
@@ -4165,7 +4166,7 @@
                                                 went forth under the teachings of that blessed one
                                                 and they strove for fruition for many hundreds of
                                                 thousands of years as if their heads were on fire,
-                                                yet still the concordant acceptance did not arise in
+                                                yet still the acceptance that concords with the truth did not arise in
                                                 them. So what need is there to mention the
                                                 attainment of the fruition? That would have been
                                                 impossible.</p>
@@ -4179,7 +4180,7 @@
                                                 led them to fall into the great Hell of Ceaseless
                                                 Torment. Even though they pleased me and nine
                                                 hundred million buddhas, they did not obtain the
-                                                concordant acceptance from any of those buddhas. Why
+                                                acceptance that concords with the truth from any of those buddhas. Why
                                                 is that? Śāriputra, this is what happens to those
                                                 who do not trust the teachings of the thus-gone
                                                 ones, who denigrate them, and who speak ill of the
@@ -4365,7 +4366,7 @@
                                                 force, a person, eternalism, or nihilism. Why is
                                                 that? Śāriputra, clinging to all those notions is
                                                 known as <distinct>wrong views</distinct>.
-                                                Śāriputra, the concordant acceptance will never
+                                                Śāriputra, the acceptance that concords with the truth will never
                                                 arise through these notions of a self, a being, a
                                                 life force, a person, eternalism, or nihilism. It is
                                                 impossible. There is no chance that this could
@@ -4388,7 +4389,7 @@
                                                 my hearers are proponents of the lack of self and
                                                 proponents of emptiness. <ref cRef="F.52.b" type="folio" xml:id="UT22084-063-001-900"/> We
                                                 train in concentration that lacks marks, we are
-                                                endowed with the concordant acceptance, and we do
+                                                endowed with the acceptance that concords with the truth, and we do
                                                 not dwell on the consciousnesses. </p>
                                         <milestone unit="chunk" xml:id="UT22084-063-001-338"/>
                                         <p tid="311">“Śāriputra, I will give those who are endowed
@@ -4866,7 +4867,7 @@
                                                 life force, and the view of a person. Why is that?
                                                 Because, Śāriputra, the Thus-Gone One directly sees
                                                 that the proponents of the view of a person lack the
-                                                concordant acceptance.</p>
+                                                acceptance that concords with the truth.</p>
                                         <milestone unit="chunk" xml:id="UT22084-063-001-373"/>
                                         <p tid="346">“Śāriputra, even if ten billion buddhas were to
                                                 use the three types of miraculous displays to teach
@@ -5091,7 +5092,7 @@
                                         <p tid="361">“Śāriputra, I do not give people with wrong
                                                 views the opportunity to go forth and take full
                                                 ordination. Śāriputra, if those who have not
-                                                developed the concordant acceptance that all
+                                                developed the acceptance that concords with the truth that all
                                                 phenomena lack a self—and are neither interested in
                                                 nor understand the emptiness of all phenomena, the
                                                 absence of a self, the absence of a being, the
@@ -6160,7 +6161,7 @@
                                                 beings that it is more than ten billion world
                                                 systems away from them, what need is there to
                                                 mention the attainments of mendicants, the
-                                                concordant acceptance, and nirvāṇa? Ānanda, at that
+                                                acceptance that concords with the truth, and nirvāṇa? Ānanda, at that
                                                 time, when there will be so many monks who are
                                                 flawed, lack qualities, are mediocre, are utterly
                                                 inferior, are lazy, are greedy, are hostile, lack
@@ -7586,12 +7587,12 @@
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-063-001-708">
-                                                  <term>concordant acceptance</term>
+                                                  <term>acceptance that concords with the truth</term>
                                                   <term xml:lang="Bo-Ltn" status="verified">rjes su ’thun pa’i bzod pa </term>
                                                   <term xml:lang="bo">རྗེས་སུ་འཐུན་པའི་བཟོད་པ།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">ānulomikadharmakṣānti</term>
+                                                  <term xml:lang="Sa-Ltn" status="verified">ānulomikī kṣānti</term>
                                                   <term type="definition">A particular realization
-                                                  attained by a bodhisattva that arises as a result
+                                                  attained by bodhisattvas that arises as a result
                                                   of analysis of the essential nature of
                                                   phenomena.</term>
                                                 </gloss>
