--- a/translations/kangyur/placeholders/071-011_toh297-the_sutra_of_many_domains.xml
+++ b/translations/kangyur/placeholders/071-011_toh297-the_sutra_of_many_domains.xml
@@ -21,10 +21,10 @@
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.20 <date>2020</date>
+                <edition>v 0.0.21 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-071-011"/>
                 <date/>
             </publicationStmt>
@@ -40,7 +40,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-22T14:34:37.639Z" user="admin">22/05/2023 14:34:37</note>
+                <note type="lastUpdated" date-time="2023-05-24T08:45:43.664Z" user="admin">24/05/2023 08:45:43</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-27T09:49:23.533Z" user="andreas">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-02-27T09:49:23.533Z" user="andreas">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-07-06T07:58:14.619Z" user="line-tofte">0.0.1</note>
@@ -70,6 +70,8 @@
                 <note type="updated" update="text-version" value="0.0.19" date-time="2023-05-17T13:02:03.713Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2023-05-22T14:34:33.164Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.20" date-time="2023-05-22T14:34:33.164Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-05-24T08:45:39.215Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.21" date-time="2023-05-24T08:45:39.215Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
