--- a/translations/kangyur/translations/001-001_toh1-1_chapter_on_going_forth.xml
+++ b/translations/kangyur/translations/001-001_toh1-1_chapter_on_going_forth.xml
@@ -31,7 +31,7 @@
                 <sponsor ref="sponsors.xml#sponsor-190">Irene Tillman</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.37.1 <date>2023</date>
+                <edition>v 1.37.2 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -66,7 +66,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-21T17:49:33.166Z" user="admin">21/05/2023 17:49:33</note>
+                <note type="lastUpdated" date-time="2023-05-24T14:14:18.429Z" user="admin">24/05/2023 14:14:18</note>
                 <note type="updated" update="text-version" value="v 1.14" date-time="2019-06-18T02:25:27.313Z" user="celso">v 1.14 2019</note>
                 <note type="updated" update="text-version" value="v 1.15" date-time="2019-06-21T14:11:40.294Z" user="celso">v 1.15 2019</note>
                 <note type="updated" update="text-version" value="v 1.17" date-time="2019-07-31T19:46:14.742Z" user="celso">v 1.17 2019</note>
@@ -140,6 +140,7 @@
                 <note type="updated" update="text-version" value="1.36.1" date-time="2023-04-26T09:12:11.666Z" user="john">Edited one note.</note>
                 <note type="updated" update="text-version" value="1.36.2" date-time="2023-05-10T11:25:52.837Z" user="martina-cotter">updated glossary issue.</note>
                 <note type="updated" update="text-version" value="1.37.1" date-time="2023-05-21T17:49:29.789Z" user="john">Changed terminology in Ch 1 for "foremost of..." distinctions and added note, with Bob's agreement.</note>
+                <note type="updated" update="text-version" value="1.37.2" date-time="2023-05-24T14:14:15.065Z" user="martina-cotter">Added pending links.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -13207,7 +13208,7 @@
                                 translators, there does not appear to be much biographical information available on this ninth-century translator. In
                                 addition to his work on the vinaya, <term type="ignore">Palgyi Lhünpo</term> translated at least two Mahāyāna sūtras
                                 (the <title xml:lang="Sa-Ltn">
-                                    <ref rend="pending" target="https://read.84000.co/translation/toh220.html">Buddhapiṭakaduḥśīlanigraha</ref>
+                                    <ref target="https://read.84000.co/translation/toh220.html">Buddhapiṭakaduḥśīlanigraha</ref>
                                 </title> and the <title xml:lang="Sa-Ltn">
                                     <ref target="https://read.84000.co/translation/toh157.html">Drumakinnararājaparipṛcchā</ref>
                                 </title>), several chapters of dhāraṇī, and several works in verse included in the
